<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quac_rviz_plugins</name>
  <version>0.0.0</version>
  <description>quac rviz plugins</description>
  <maintainer email="robotik@wgg-neumarkt.de">pilot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>quac_interfaces</depend>
  <depend>rviz_rendering</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>